Positioning fixes. Removes menu collapsers.

--- a/src/styles.css
+++ b/src/styles.css
@@ -132,13 +132,13 @@ input[type="search"]::-webkit-search-decoration {
     opacity: 1;
 }
 
-::-webkit-scrollbar {
+body *::-webkit-scrollbar {
     width: 14px;
     height: 18px;
     z-index: 1000;
 }
 
-::-webkit-scrollbar-thumb {
+body *::-webkit-scrollbar-thumb {
     height: 6px;
     border: 4px solid rgba(0, 0, 0, 0);
     background-clip: padding-box;
@@ -147,17 +147,17 @@ input[type="search"]::-webkit-search-decoration {
     box-shadow: inset -1px -1px 0px rgba(255, 255, 255, 0.05), inset 1px 1px 0px rgba(255, 255, 255, 0.05);
 }
 
-::-webkit-scrollbar-button {
+body *::-webkit-scrollbar-button {
     width: 0;
     height: 0;
     display: none;
 }
 
-::-webkit-scrollbar-corner {
+body *::-webkit-scrollbar-corner {
     background-color: transparent;
 }
 
-::-webkit-scrollbar-track {
+body *::-webkit-scrollbar-track {
     padding: 0;
     box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.6);
     border-radius: 10px;
